--- a/cn/index.html
+++ b/cn/index.html
@@ -102,7 +102,7 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-heartbeat"></i></a></li>
+			<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 			<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://weibo.com/renkai123" title="Weibo"><i class="fa fa-weibo"></i></a></li>
 			<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -1017,7 +1017,7 @@
 			<div class="col-six tab-full pull-right social">
 
 				<ul class="footer-social">
-					<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-heartbeat"></i></a></li>
+					<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 					<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://weibo.com/renkai123" title="Weibo"><i class="fa fa-weibo"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
