--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 							<i class="fa fa-briefcase"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>Smart Agriculture "Sanqin Innovation Team"
+							<h3>Sanqin Innovation Team of Smart Agriculture
 
 							</h3>
 							<p>2021.09 - Current</p>
@@ -550,26 +550,42 @@
 				</table>
 			</div>
 
-			<h3>Skills certificate: </h3>
+			<h3>Skills Certificate: </h3>
 			<ul class="disc">
 				<li>CET-6</li>
 				<li>Level 3 Network Technology Certificate </li>
 				<li>Putonghua First-Class Certificate</li>
 			</ul>
 
-			<h3>学习活动：</h3>
+			<h3>Activities & Honors: </h3>
 			<ul class="disc">
-				<li>参与第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</li>
-				<li>参与西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</li>
-				<li>2021 年获专业一等奖学金</li>
-				<li>2016、2017 连续两年获专业一等奖学金</li>
-				<li>硕士毕业获南京师范大学 2019 届优秀研究生毕业生</li>
-				<li>五次获优秀研究生（2017校、2017院、2018校、2018院、2019校）</li>
-				<li>两次获校级优秀团员（2017、2018）</li>
-				<li>本科毕业论文获西北农林科技大学优秀毕业论文（2016）</li>
-				<li>组织西北农林科技大学田园使者团队，获校级“优秀奖”（2015）</li>
-				<li>主持并负责国家级科创项目《黄土坡耕地微地形数值模拟及机理研究》并获校级“优秀奖”（2014）</li>
-				<li>组织三下乡活动“赴安塞水土保持综合试验站调研服务”并获校级“优秀奖”（2014）</li>
+				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;One of the organizers of an international academic conference,
+					City+2023@Perth,
+					Australia, with
+					the theme of Geospatial Big Data and Artificial
+					Intelligence for Cities</li>
+				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;Won the Bronze Award in the 11th "Challenger Cup" Shaanxi
+					University Student Entrepreneurship Plan Competition</li>
+				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;Participated in the 10th Challenge Cup College Student
+					Entrepreneurship Plan Competition of Northwest A&F
+					University and won the silver award in the final</li>
+				<li><b>2021</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐Class scholarship of Northwest A&F University</li>
+				<li><b>2019</b>&nbsp;&nbsp;&nbsp;&nbsp;Outstanding graduate of Nanjing Normal University</li>
+				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent postgraduate of Nanjing Normal University (Four times)
+				</li>
+				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;Outstanding Undergraduate Thesis of Northwest A&F University</li>
+				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐class scholarship of Nanjing Normal University (Two times)
+				</li>
+				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;The undergraduate thesis was awarded the excellent graduation
+					thesis of Northwest A&F University</li>
+				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;Organize the pastoral envoy team of Northwest A&F University and
+					won the "Excellent Award" at the university level</li>
+				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;The National Science and Technology Innovation Project Numerical
+					Simulation and Mechanism Research of Loess Slope Cultivated Land Microtopography won the Excellence
+					Award</li>
+				<li><b>2014</b>&nbsp;&nbsp;&nbsp;&nbsp;Organize the activity of Three Visits to the Countryside,
+					Investigation Service in Ansai Comprehensive Test Station of Soil and Water Conservation, and won
+					the Excellent Award at the school level</li>
 			</ul>
 		</div>
 
@@ -976,13 +992,10 @@
 
 		<div class="row section-intro">
 			<div class="col-twelve">
-
 				<h5>Contact</h5>
 				<h1>I'd Love to Hear From You.</h1>
-
 				<p class="lead">Hope that people with common interests can make progress together! Welcome to discuss
 					learning issues.</p>
-
 			</div>
 		</div> <!-- /section-intro -->
 
@@ -990,44 +1003,32 @@
 		<div class="row contact-info">
 
 			<div class="col-four tab-full">
-
 				<div class="icon">
 					<i class="icon-pin"></i>
 				</div>
-
 				<h5>Where to find me</h5>
-
 				<p style="color: #888888">
 					Northwest A&F University<br>
 					College of Natural Resources and Environment
 				</p>
-
 			</div>
 
 			<div class="col-four tab-full collapse">
-
 				<div class="icon">
 					<i class="icon-mail"></i>
 				</div>
-
 				<h5>Email Me At</h5>
-
 				<p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
-
 			</div>
 
 			<div class="col-four tab-full">
-
 				<div class="icon">
 					<i class="icon-phone"></i>
 				</div>
-
 				<h5>Call Me At</h5>
-
 				<p style="color: #888888"> &plus;86 18851138358<br>
 				</p>
-
 			</div>
 
 		</div> <!-- /contact-info -->
