--- a/cn/index.html
+++ b/cn/index.html
@@ -531,6 +531,7 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
+				<li>2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议的组织者之一</li>
 				<li>参与第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</li>
 				<li>参与西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</li>
 				<li>2021 年获专业一等奖学金</li>
