--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 
 			<h3>Activities & Honors: </h3>
 			<ul class="disc">
-				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;One of the organizers of an international academic conference,
+				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;One of the organizers of an International Academic Conference,
 					City+2023@Perth,
 					Australia, with
 					the theme of Geospatial Big Data and Artificial
