--- a/cn/index.html
+++ b/cn/index.html
@@ -10,7 +10,7 @@
 	<!--- basic page needs
    ================================================== -->
 	<meta charset="utf-8">
-	<title>简历 | 任凯的电子简介</title>
+	<title>简历 | 任凯的电子简历</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -531,7 +531,7 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
-				<li>2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议的组织者之一</li>
+				<li>2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议的组织者之一（2023）</li>
 				<li>参与第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</li>
 				<li>参与西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</li>
 				<li>2021 年获专业一等奖学金</li>
@@ -670,7 +670,6 @@
 					<!-- modal popups - begin
 	            ============================================================= -->
 					<div id="modal-06" class="popup-modal slider mfp-hide">
-
 						<div class="media">
 							<img src="../images/portfolio/modals/work06.png" alt="" />
 						</div>
@@ -687,10 +686,9 @@
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
-
 					</div> <!-- /modal-06 -->
-					<div id="modal-05" class="popup-modal slider mfp-hide">
 
+					<div id="modal-05" class="popup-modal slider mfp-hide">
 						<div class="media">
 							<img src="../images/portfolio/modals/work05.png" alt="" />
 						</div>
@@ -707,11 +705,9 @@
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
-
 					</div>
 
 					<div id="modal-04" class="popup-modal slider mfp-hide">
-
 						<div class="media">
 							<img src="../images/portfolio/modals/work04.png" alt="" />
 						</div>
@@ -727,11 +723,9 @@
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
-
 					</div> <!-- /modal-02 -->
 
 					<div id="modal-03" class="popup-modal slider mfp-hide">
-
 						<div class="media">
 							<img src="../images/portfolio/modals/work03.png" alt="" />
 						</div>
@@ -748,11 +742,9 @@
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
-
 					</div> <!-- /modal-03 -->
 
 					<div id="modal-02" class="popup-modal slider mfp-hide">
-
 						<div class="media">
 							<img src="../images/portfolio/modals/work02.png" alt="" />
 						</div>
@@ -760,7 +752,6 @@
 						<div class="description-box">
 							<h4>地下空间三维建模与分析系统</h4>
 							<p>该系统主要是对城市地下三维空间进行建模和分析，主要功能包括钻孔/矢量/栅格数据的管理、钻孔信息的查询、三维建模、网格剖分以及空间分析（线性变换、挖方分析、模型切块）操作。</p>
-
 							<div class="categories">软件著作权</div>
 						</div>
 
@@ -768,11 +759,9 @@
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
-
 					</div> <!-- /modal-04 -->
 
 					<div id="modal-01" class="popup-modal slider mfp-hide">
-
 						<div class="media">
 							<img src="../images/portfolio/modals/work01.png" alt="" />
 						</div>
@@ -788,47 +777,33 @@
 							<a href="javascript:void(0)">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
-
 					</div> <!-- /modal-05 -->
-
-
-
 
 					<!-- modal popups - end
 	            ============================================================= -->
-
 				</div> <!-- /portfolio-wrapper -->
-
 			</div> <!-- /twelve -->
-
 		</div> <!-- /portfolio-content -->
-
 	</section> <!-- /portfolio -->
 
 
 	<!-- CTA Section
    ================================================== -->
 	<!-- <section id="cta" class="grey-section">
-
    	<div class="row cta-content">
-
    		<div class="col-twelve section-ads">  
-
 	     		<h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Styleshout Recommends Dreamhost.</a></h2>
 
 		      <p class="lead">
 		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
 				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
 				</p>
-
 				<div class="action">
 			      <a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up Now</a>
 		      </div>		     	
 
    		</div>
-
    	</div>
-
    </section> -->
 	<!-- /cta  -->
 
@@ -836,54 +811,36 @@
 	<!-- services Section
    ================================================== -->
 	<section id="services">
-
 		<div class="overlay"></div>
-
 		<div class="row section-intro">
 			<div class="col-twelve">
-
 				<h5>SKILLS</h5>
 				<h6></h6>
 				<h1 style="font-family:KaiTi">高山仰止，景行行止</h1>
 				<p class="lead">一枚渴望成为技术控的鸡丝儿，学习 ing …</p>
-
 			</div>
 		</div> <!-- /section-intro -->
 
 		<div class="row services-content">
-
 			<div id="owl-slider" class="owl-carousel services-list">
-
 				<div class="service">
-
 					<span class="icon"><i class="icon-earth"></i></span>
-
 					<div class="service-content">
-
 						<h3>ArcGIS Engine</h3>
-
 						<p class="desc">基于 ArcGIS Engine 平台，进行 GIS 二次开发。做过多个 AE
 							系统开发项目，有一定的项目经验。例如：《地下空间三维建模与分析系统》《滇池蓝藻水华漂移模拟系统》等。
 						</p>
-
 					</div>
-
 				</div> <!-- /service -->
 
 				<div class="service">
-
 					<span class="icon"><i class="icon-window"></i></span>
-
 					<div class="service-content">
-
 						<h3>Java/C++</h3>
-
 						<p class="desc">精通 Java 与 C++ 语言。熟悉面向对象开发思想。能熟练使用 Java 技术，熟悉 JSP，Servlet，JDBC 和常用框架
 							Spring，Struts，Hibernate 及前端技术。
 						</p>
-
 					</div>
-
 				</div> <!-- /service -->
 
 				<div class="service">
@@ -907,20 +864,14 @@
 				</div>
 
 				<div class="service">
-
 					<span class="icon"><i class="icon-camera"></i></span>
-
 					<div class="service-content">
-
 						<h3>Photography</h3>
-
 						<p class="desc">业余爱好摄影拍照，常用设备 iPhone 12 Pro Max，佳能微单 M200。PS
 							不熟练又麻烦，所以后期常用美图秀秀一键搞定。喜欢拍风景、静物，也喜欢拍人像。我的摄影作品在这里：<a href="http://photo.renkaigis.cn"
 								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.cn</a>
 						</p>
-
 					</div>
-
 				</div>
 
 				<!-- <div class="service">
@@ -939,9 +890,7 @@
 				<!-- /service -->
 
 			</div> <!-- /services-list -->
-
 		</div> <!-- /services-content -->
-
 	</section> <!-- /services -->
 
 
@@ -962,50 +911,36 @@
 
 
 		<div class="row contact-info">
-
 			<div class="col-four tab-full">
-
 				<div class="icon">
 					<i class="icon-pin"></i>
 				</div>
-
 				<h5>地 址</h5>
-
 				<p style="color: #888888">
 					西北农林科技大学<br>
 					资源环境学院
 				</p>
-
 			</div>
 
 			<div class="col-four tab-full collapse">
-
 				<div class="icon">
 					<i class="icon-mail"></i>
 				</div>
-
 				<h5>邮 件</h5>
-
 				<p><a href="mailto:renkaigis@gmail.com" style="color:#888888">renkaigis@gmail.com</a>
 				</p>
 
 			</div>
 
 			<div class="col-four tab-full">
-
 				<div class="icon">
 					<i class="icon-phone"></i>
 				</div>
-
 				<h5>电 话</h5>
-
 				<p style="color: #888888"> &plus;86 18851138358<br>
 				</p>
-
 			</div>
-
 		</div> <!-- /contact-info -->
-
 	</section> <!-- /contact -->
 
 
@@ -1014,9 +949,7 @@
 
 	<footer>
 		<div class="row">
-
 			<div class="col-six tab-full pull-right social">
-
 				<ul class="footer-social">
 					<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 					<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
@@ -1025,7 +958,6 @@
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 					<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 				</ul>
-
 			</div>
 
 			<div class="col-six tab-full">
