--- a/cn/index.html
+++ b/cn/index.html
@@ -341,7 +341,7 @@
 							<h4>陕西省智慧农业决策系统和大数据分析平台 | 参与者</h4>
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>
-								构建旱地农业系统大数据分析平台和“智慧果园”决策支持平台。构建智慧农业技术体系，支撑农业、果业、气象、水利等业务部门灾害监测、预警预报、农业保险、产量预报等技术需求；
+								构建旱地农业系统大数据分析平台和“智慧果园”决策支持平台。构建智慧农业技术体系，支撑农业、果业、气象、水利等业务部门灾害监测、预警预报、农业保险、产量预报等技术需求。
 							</span></br>
 							<span>
 								<h5 style="display: inline;">工作描述：</h5>
@@ -404,7 +404,7 @@
 							<h4>邳州市地下水脆弱性评价 | 负责人</h4>
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>基于 ArcGIS 软件、C#
-								开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作；
+								开发，根据江苏省邳州市的地质数据、气象数据和自然地理数据等相关数据，通过理论分析与区域水文地质特征，并结合专家知识经验，确定地下水评价的指标体系及权重因子，完成对江苏省邳州市地下水脆弱性的评价工作。
 							</span></br>
 							<span>
 								<h5 style="display: inline;">工作描述：</h5>负责数据预处理，确定评价体系与权重因子，进行地下水脆弱性评价并出图。
@@ -424,7 +424,7 @@
 							<span>
 								<h5 style="display: inline;">项目描述：</h5>
 								采用人工模拟降雨试验和微地形扫描测量等方法，动态监测坡面水蚀过程中侵蚀形态发生与演变过程，结合
-								GIS 技术建立相应的微地形 DEM，通过理论分析和数学模拟，建立坡面不同侵蚀形态发生演变过程动态数值模拟模型；
+								GIS 技术建立相应的微地形 DEM，通过理论分析和数学模拟，建立坡面不同侵蚀形态发生演变过程动态数值模拟模型。
 							</span></br>
 							<span>
 								<h5 style="display: inline;">工作描述：</h5>
@@ -867,8 +867,8 @@
 					<span class="icon"><i class="icon-camera"></i></span>
 					<div class="service-content">
 						<h3>Photography</h3>
-						<p class="desc">业余爱好摄影拍照，常用设备 iPhone 12 Pro Max，佳能微单 M200。PS
-							不熟练又麻烦，所以后期常用美图秀秀一键搞定。喜欢拍风景、静物，也喜欢拍人像。我的摄影作品在这里：<a href="http://photo.renkaigis.cn"
+						<p class="desc">业余爱好摄影拍照，常用设备 iPhone 12 Pro Max，佳能微单 M200。喜欢拍风景、静物，也喜欢拍人像。我的摄影作品在这里：<a
+								href="http://photo.renkaigis.cn"
 								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.cn</a>
 						</p>
 					</div>
