--- a/index.html
+++ b/index.html
@@ -619,6 +619,24 @@
 					Investigation Service in Ansai Comprehensive Test Station of Soil and Water Conservation, and won
 					the Excellent Award at the school level</li>
 			</ul>
+
+			<h3>Some projects: </h3>
+			<ul class="disc">
+				<li><a href="http://you.renkaigis.cn/" target="_blank">Big Oil Benefits —— Oily Sludge
+						Remediation Expert </a><br /><a href="./images/Provincial_Bronze_Award.jpg" target="_blank"
+						style="text-decoration: underline;">
+						[ Provincial Bronze Award ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
+						href="./images/School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
+						School Silver Award ]</a></li>
+				<li><a href="http://moyu.renkaigis.cn/" target="_blank">ShanMoShi —— Assisting the Development of the
+						Konjac Industry in
+						Zhenba County Under the Rural Revitalization Strategy
+					</a></li>
+				<li><a href="http://soildoc.renkaigis.cn/" target="_blank">SoilDoctor —— Soil Diagnosis Doctor
+
+					</a>
+				</li>
+			</ul>
 		</div>
 
 	</section> <!-- /features -->
@@ -939,9 +957,9 @@
 					<span class="icon"><i class="icon-window"></i></span>
 					<div class="service-content">
 						<h3>Java/C++</h3>
-						<p class="desc">精通 Java 与 C++ 语言。熟悉面向对象开发思想。能熟练使用 Java 技术，熟悉 JSP，Servlet，JDBC 和常用框架
-							Spring，Struts，Hibernate 及前端技术。
-						</p>
+						<p class="desc">Proficient in Java and C++ languages. Familiar with object-oriented development
+							ideas. Proficient in using Java technology, familiar with JSP, Servlet, JDBC, and common
+							frameworks Spring, Struts, Hibernate, and front-end technology. </p>
 					</div>
 				</div> <!-- /service -->
 
@@ -969,7 +987,7 @@
 					<span class="icon"><i class="icon-camera"></i></span>
 					<div class="service-content">
 						<h3>Photography</h3>
-						<p class="desc">Hobbies photography, common equipment iPhone 12 Pro Max, Canon WeChat M200. I
+						<p class="desc">Hobbies photography, common equipment iPhone 12 Pro Max, Canon M200. I
 							like to take pictures of scenery, still life, and portraits. My photography works are here:
 							<a href="http://photo.renkaigis.cn"
 								style="color: rgba(255, 255, 255, 0.6)">http://photo.renkaigis.cn</a>
