--- a/cn/index.html
+++ b/cn/index.html
@@ -544,6 +544,15 @@
 				<li>主持并负责国家级科创项目《黄土坡耕地微地形数值模拟及机理研究》并获校级“优秀奖”（2014）</li>
 				<li>组织三下乡活动“赴安塞水土保持综合试验站调研服务”并获校级“优秀奖”（2014）</li>
 			</ul>
+
+			<h3>参与的一些项目: </h3>
+			<ul class="disc">
+				<li><a href="http://you.renkaigis.cn/">大油作为 —— 含油污泥修复专家 </a></li>
+				<li><a href="http://moyu.renkaigis.cn/">擅魔师 —— 乡村振兴战略下助力镇巴县魔芋产业发展
+					</a></li>
+				<li><a href="http://soildoc.renkaigis.cn/">果土绸缪 —— 土壤诊断医生 </a>
+				</li>
+			</ul>
 		</div>
 
 	</section> <!-- /features -->
