--- a/index.html
+++ b/index.html
@@ -632,9 +632,7 @@
 						Konjac Industry in
 						Zhenba County Under the Rural Revitalization Strategy
 					</a></li>
-				<li><a href="http://soildoc.renkaigis.cn/" target="_blank">SoilDoctor —— Soil Diagnosis Doctor
-
-					</a>
+				<li><a href="http://soildoc.renkaigis.cn/" target="_blank">SoilDoctor —— Soil Diagnosis Doctor </a>
 				</li>
 			</ul>
 		</div>
