--- a/cn/index.html
+++ b/cn/index.html
@@ -548,9 +548,10 @@
 			<h3>参与的一些小项目: </h3>
 			<ul class="disc">
 				<li><a href="http://you.renkaigis.cn/" target="_blank">大油作为 —— 含油污泥修复专家</a><br /><a
-						href="./images/Provincial_Bronze_Award.jpg" target="_blank" style="text-decoration: underline;">
+						href="../images/Provincial_Bronze_Award.jpg" target="_blank"
+						style="text-decoration: underline;">
 						[ 省级铜奖 ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
-						href="./images/School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
+						href="../images/School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
 						校级银奖 ]</a></li>
 				<li><a href="http://moyu.renkaigis.cn/" target="_blank">擅魔师 —— 乡村振兴战略下助力镇巴县魔芋产业发展</a></li>
 				<li><a href="http://soildoc.renkaigis.cn/" target="_blank">果土绸缪 —— 土壤诊断医生</a>
