--- a/cn/index.html
+++ b/cn/index.html
@@ -484,39 +484,47 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>《地学模型模拟动态可视化系统》</td>
-							<td>2017SR374929</td>
-							<td>2017-07-17</td>
-						</tr>
-						<tr>
-							<td>《地学模拟多维网格自适应生成系统》</td>
-							<td>2017SR374939</td>
-							<td>2017-07-17</td>
-						</tr>
-						<tr>
-							<td>《地下空间三维建模与分析系统》</td>
-							<td>2017SR431955</td>
-							<td>2017-08-06</td>
-						</tr>
-						<tr>
-							<td>《水文地质建模与模拟系统》</td>
-							<td>2017SR427979</td>
-							<td>2017-08-07</td>
-						</tr>
-						<tr>
-							<td>《大型水体总悬浮物模拟系统》</td>
-							<td>2018SR798096</td>
-							<td>2018-10-08</td>
-						</tr>
-						<tr>
-							<td>《滇池水体蓝藻水华漂移模拟系统》</td>
-							<td>2018SR955442</td>
-							<td>2018-11-29</td>
-						</tr>
-						<tr>
-							<td>《层状地质体结构面识别与智能分析系统》</td>
+							<td><a href="../images/SoftwareCopyright/4_GeologicalStructure.jpg"
+									target="_blank">《层状地质体结构面识别与智能分析系统》</a></td>
 							<td>2019SR0706808</td>
-							<td>2019-07-09</td>
+							<td>2019.07.09</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/1_CBBMSystem.jpg"
+									target="_blank">《滇池水体蓝藻水华漂移模拟系统》</a></td>
+							<td>2018SR955442</td>
+							<td>2018.11.29</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/3_LargeWaterSystem.jpg"
+									target="_blank">《大型水体总悬浮物模拟系统》</a> </td>
+							<td>2018SR798096</td>
+							<td>2018.10.08</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/3_HydroMSystem.jpg"
+									target="_blank">《水文地质建模与模拟系统》</a> </td>
+							<td>2017SR427979</td>
+							<td>2017.08.07</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/2_TMASystem.jpg"
+									target="_blank">《地下空间三维建模与分析系统》</a> </td>
+							<td>2017SR431955</td>
+							<td>2017.08.06</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/5_Geo_Grid_System.jpg"
+									target="_blank">《地学模拟多维网格自适应生成系统》</a></td>
+							<td>2017SR374939</td>
+							<td>2017.07.17</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/4_GMSDVSystem.jpg"
+									target="_blank">《地学模型模拟动态可视化系统》</a>
+							</td>
+							<td>2017SR374929</td>
+							<td>2017.07.17</td>
 						</tr>
 					</tbody>
 				</table>
