--- a/index.html
+++ b/index.html
@@ -634,10 +634,10 @@
 			<h3>Some projects: </h3>
 			<ul class="disc">
 				<li><a href="http://you.renkaigis.cn/" target="_blank">Big Oil Benefits —— Oily Sludge
-						Remediation Expert </a><br /><a href="images/Provincial_Bronze_Award.jpg" target="_blank"
+						Remediation Expert </a><br /><a href="https://photo-kai.oss-cn-hangzhou.aliyuncs.com/1mine/2022_Provincial_Bronze_Award.jpg" target="_blank"
 						style="text-decoration: underline;">
 						[ Provincial Bronze Award ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
-						href="images/School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
+						href="https://photo-kai.oss-cn-hangzhou.aliyuncs.com/1mine/2022_School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
 						School Silver Award ]</a></li>
 				<li><a href="http://moyu.renkaigis.cn/" target="_blank">ShanMoShi —— Assisting the Development of the
 						Konjac Industry in
