--- a/index.html
+++ b/index.html
@@ -607,37 +607,66 @@
 					Australia, with
 					the theme of Geospatial Big Data and Artificial
 					Intelligence for Cities</li>
-				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;Won the Bronze Award in the 11th "Challenger Cup" Shaanxi
-					University Student Entrepreneurship Plan Competition</li>
-				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;Participated in the 10th Challenge Cup College Student
-					Entrepreneurship Plan Competition of Northwest A&F
-					University and won the silver award in the final</li>
-				<li><b>2021</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐Class scholarship of Northwest A&F University</li>
-				<li><b>2019</b>&nbsp;&nbsp;&nbsp;&nbsp;Outstanding graduate of Nanjing Normal University</li>
-				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent postgraduate of Nanjing Normal University (Four times)
+				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_Provincial_Bronze_Award.jpg"
+						target="_blank">Won the Bronze Award in the 11th "Challenger Cup" Shaanxi
+						University Student Entrepreneurship Plan Competition</a></li>
+				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_School_Silver_Award.jpg"
+						target="_blank">Participated in the 10th Challenge Cup College Student
+						Entrepreneurship Plan Competition of Northwest A&F
+						University and Won the Silver Award in the Final</a></li>
+				<li><b>2021</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐Class Scholarship of Northwest A&F University</li>
+				<li><b>2019</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2019_Excellent_graduate_student_of_NNU.jpg"
+						target="_blank">Outstanding Graduate of Nanjing Normal University</a></li>
+				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent Postgraduate of Nanjing Normal University (Four
+					times:<a href="images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank">2017
+						Shool-Level</a><a href="images/2017_Excellent_graduate_student_at_college_level.jpg"
+						target="_blank">2017
+						College-Level</a><a href="images/2018_Excellent_graduate_student_at_school_level.jpg"
+						target="_blank">2018 Shool-Level</a><a
+						href="images/2018_Excellent_graduate_student_at_college_level.jpg" target="_blank">2018
+						College-Level</a>
+					)
 				</li>
-				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;Outstanding Undergraduate Thesis of Northwest A&F University</li>
+				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent League Member of Nanjing Normal University (Two
+					times:<a href="images/2017_Excellent_League_member_at_school_level.jpg" target="_blank">2017
+						Shool-Level</a><a href="images/2018_Excellent_League_member_at_school_level.jpg"
+						target="_blank">2018
+						Shool-Level</a> )
+				</li>
 				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐class scholarship of Nanjing Normal University (Two times)
 				</li>
-				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;The undergraduate thesis was awarded the excellent graduation
-					thesis of Northwest A&F University</li>
-				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;Organize the pastoral envoy team of Northwest A&F University and
-					won the "Excellent Award" at the university level</li>
-				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;The National Science and Technology Innovation Project Numerical
-					Simulation and Mechanism Research of Loess Slope Cultivated Land Microtopography won the Excellence
-					Award</li>
-				<li><b>2014</b>&nbsp;&nbsp;&nbsp;&nbsp;Organize the activity of Three Visits to the Countryside,
-					Investigation Service in Ansai Comprehensive Test Station of Soil and Water Conservation, and won
-					the Excellent Award at the school level</li>
+				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2016_Class_deputy_league_secretary.jpg"
+						target="_blank">Served as the Deputy League Secretary of the Class</a></li>
+				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2016_Excellent_Graduation_Thesis.jpg"
+						target="_blank">Outstanding Undergraduate Thesis of Northwest A&F University</a></li>
+				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2015_Pastoral_envoy.jpg" target="_blank">Organize
+						the pastoral envoy team of Northwest A&F University and
+						won the "Excellent Award" at the university level</a></li>
+				<li><b>2015</b>&nbsp;&nbsp;&nbsp;&nbsp;<a
+						href="images/2015_National_science_and_innovation_projects.jpg" target="_blank">The National
+						Science and Technology Innovation Project Numerical
+						Simulation and Mechanism Research of Loess Slope Cultivated Land Microtopography won the
+						Excellence
+						Award</a></li>
+				<li><b>2014</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2014_Excellent_League_member_at_school_level.jpg"
+						target="_blank">Excellent League Member of Northwest A&F University </a></li>
+				<li><b>2014</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2014_School_level_social_practice_model.jpg"
+						target="_blank">Social
+						Practice Model of Northwest A & F University </a></li>
+				<li><b>2014</b>&nbsp;&nbsp;&nbsp;&nbsp;<a
+						href="images/2014_Volunteer_Activities_for_the_Country_People.jpg" target="_blank">Organize the
+						activity of Three Visits to the Countryside, Investigation Service in Ansai Comprehensive Test
+						Station of Soil and Water Conservation, and won
+						the Excellent Award at the school level</a></li>
 			</ul>
 
 			<h3>Some projects: </h3>
 			<ul class="disc">
 				<li><a href="http://you.renkaigis.cn/" target="_blank">Big Oil Benefits —— Oily Sludge
-						Remediation Expert </a><br /><a href="https://photo-kai.oss-cn-hangzhou.aliyuncs.com/1mine/2022_Provincial_Bronze_Award.jpg" target="_blank"
+						Remediation Expert </a><br /><a href="images/2022_Provincial_Bronze_Award.jpg" target="_blank"
 						style="text-decoration: underline;">
 						[ Provincial Bronze Award ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
-						href="https://photo-kai.oss-cn-hangzhou.aliyuncs.com/1mine/2022_School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
+						href="images/2022_School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
 						School Silver Award ]</a></li>
 				<li><a href="http://moyu.renkaigis.cn/" target="_blank">ShanMoShi —— Assisting the Development of the
 						Konjac Industry in
@@ -645,6 +674,17 @@
 					</a></li>
 				<li><a href="http://soildoc.renkaigis.cn/" target="_blank">SoilDoctor —— Soil Diagnosis Doctor </a>
 				</li>
+			</ul>
+
+			<h3>Hobbies: </h3>
+			<ul class="disc">
+				<li><a href="images/2018_Nanjing_Marathon.jpg" target="_blank">2018 Nanjing Marathon - 02:10:07</a></li>
+				<li><a href="images/2017_Nanjing_Marathon.jpg" target="_blank">2017 Nanjing Marathon - 02:27:05</a></li>
+				<li><a href="images/2017_Xianlin_Marathon.jpg" target="_blank">2017 Nanjing Xianlin Half Marathon -
+						02:23:39</a></li>
+				<li><a href="images/2013_3rd_ChinaDream.jpg" target="_blank">2013 Won the third prize of Shaanxi
+						University Photography Competition
+					</a></li>
 			</ul>
 		</div>
 
