--- a/cn/index.html
+++ b/cn/index.html
@@ -540,31 +540,66 @@
 			<h3>学习活动：</h3>
 			<ul class="disc">
 				<li>2023 年澳大利亚珀斯举办的 City+ 城市研究国际青年学者会议的组织者之一（2023）</li>
-				<li>参与第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</li>
-				<li>参与西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</li>
+				<li><a href="../images/2022_Provincial_Bronze_Award.jpg"
+						target="_blank">参与第十一届“挑战杯”陕西省大学生创业计划竞赛，并获省级铜奖（2022）</a></li>
+				<li><a href="../images/2022_School_Silver_Award.jpg"
+						target="_blank">参与西北农林科技大学第十届挑战杯大学生创业计划竞赛，并获决赛银奖（2022）</a></li>
 				<li>2021 年获专业一等奖学金</li>
 				<li>2016、2017 连续两年获专业一等奖学金</li>
-				<li>硕士毕业获南京师范大学 2019 届优秀研究生毕业生</li>
-				<li>五次获优秀研究生（2017校、2017院、2018校、2018院、2019校）</li>
-				<li>两次获校级优秀团员（2017、2018）</li>
-				<li>本科毕业论文获西北农林科技大学优秀毕业论文（2016）</li>
-				<li>组织西北农林科技大学田园使者团队，获校级“优秀奖”（2015）</li>
-				<li>主持并负责国家级科创项目《黄土坡耕地微地形数值模拟及机理研究》并获校级“优秀奖”（2014）</li>
-				<li>组织三下乡活动“赴安塞水土保持综合试验站调研服务”并获校级“优秀奖”（2014）</li>
+				<li><a href="../images/2019_Excellent_graduate_student_of_NNU.jpg" target="_blank">硕士毕业获南京师范大学 2019
+						届优秀研究生毕业生</a></li>
+				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;四次获优秀研究生（<a
+						href="../images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank">2017
+						校级</a><a href="../images/2017_Excellent_graduate_student_at_college_level.jpg"
+						target="_blank">2017
+						院级</a><a href="../images/2018_Excellent_graduate_student_at_school_level.jpg"
+						target="_blank">2018
+						校级</a><a href="../images/2018_Excellent_graduate_student_at_college_level.jpg"
+						target="_blank">2018
+						院级</a>
+					）
+				</li>
+				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;两次获校级优秀团员（Two
+					times:<a href="../images/2017_Excellent_League_member_at_school_level.jpg" target="_blank">2017
+						校级</a><a href="../images/2018_Excellent_League_member_at_school_level.jpg" target="_blank">2018
+						校级</a>
+				</li>
+				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="..images/2016_Class_deputy_league_secretary.jpg"
+						target="_blank">担任班级副团支书</a></li>
+				<li><a href="../images/2016_Excellent_Graduation_Thesis.jpg"
+						target="_blank">本科毕业论文获西北农林科技大学优秀毕业论文（2016）</a></li>
+				<li><a href="../images/2015_Pastoral_envoy.jpg" target="_blank">组织西北农林科技大学田园使者团队，获校级“优秀奖”（2015）</a></li>
+				<li><a href="../images/2015_National_science_and_innovation_projects.jpg"
+						target="_blank">主持并负责国家级科创项目《黄土坡耕地微地形数值模拟及机理研究》并获校级“优秀奖”（2015）</a></li>
+				<li><a href="../images/2014_Excellent_League_member_at_school_level.jpg"
+						target="_blank">西北农林科技大学优秀团员（2014）</a></li>
+				<li><a href="../images/2014_School_level_social_practice_model.jpg"
+						target="_blank">西北农林科技大学社会实践标兵（2014）</a></li>
+				<li><a href="../images/2014_Volunteer_Activities_for_the_Country_People.jpg"
+						target="_blank">组织三下乡活动“赴安塞水土保持综合试验站调研服务”并获校级“优秀奖”（2014）</a></li>
 			</ul>
 
 			<h3>参与的一些小项目: </h3>
 			<ul class="disc">
 				<li><a href="http://you.renkaigis.cn/" target="_blank">大油作为 —— 含油污泥修复专家</a><br /><a
-						href="https://photo-kai.oss-cn-hangzhou.aliyuncs.com/1mine/2022_Provincial_Bronze_Award.jpg" target="_blank"
+						href="../images/2022_Provincial_Bronze_Award.jpg" target="_blank"
 						style="text-decoration: underline;">
 						[ 省级铜奖 ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
-						href="https://photo-kai.oss-cn-hangzhou.aliyuncs.com/1mine/2022_School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
+						href="../images/2022_School_Silver_Award.jpg" target="_blank"
+						style="text-decoration: underline;">[
 						校级银奖 ]</a></li>
 				<li><a href="http://moyu.renkaigis.cn/" target="_blank">擅魔师 —— 乡村振兴战略下助力镇巴县魔芋产业发展</a></li>
 				<li><a href="http://soildoc.renkaigis.cn/" target="_blank">果土绸缪 —— 土壤诊断医生</a>
 				</li>
 			</ul>
+			<h3>业余爱好： </h3>
+			<ul class="disc">
+				<li><a href="../images/2018_Nanjing_Marathon.jpg" target="_blank">2018 南京马拉松 - 02:10:07</a></li>
+				<li><a href="../images/2017_Nanjing_Marathon.jpg" target="_blank">2017 南京马拉松 - 02:27:05</a></li>
+				<li><a href="../images/2017_Xianlin_Marathon.jpg" target="_blank">2017 南京仙林半程马拉松 - 02:23:39</a></li>
+				<li><a href="../images/2013_3rd_ChinaDream.jpg" target="_blank">2013 陕西省高校大学生原创摄影比赛三等奖</a></li>
+			</ul>
+
 		</div>
 
 	</section> <!-- /features -->
