--- a/cn/index.html
+++ b/cn/index.html
@@ -548,24 +548,24 @@
 				<li>2016、2017 连续两年获专业一等奖学金</li>
 				<li><a href="../images/2019_Excellent_graduate_student_of_NNU.jpg" target="_blank">硕士毕业获南京师范大学 2019
 						届优秀研究生毕业生</a></li>
-				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;四次获优秀研究生（<a
-						href="../images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank">2017
-						校级</a><a href="../images/2017_Excellent_graduate_student_at_college_level.jpg"
-						target="_blank">2017
-						院级</a><a href="../images/2018_Excellent_graduate_student_at_school_level.jpg"
-						target="_blank">2018
-						校级</a><a href="../images/2018_Excellent_graduate_student_at_college_level.jpg"
-						target="_blank">2018
+				<li>四次获优秀研究生（<a href="../images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank"
+						style="text-decoration: underline;">2017
+						校级</a>；<a href="../images/2017_Excellent_graduate_student_at_college_level.jpg" target="_blank"
+						style="text-decoration: underline;">2017
+						院级</a>；<a href="../images/2018_Excellent_graduate_student_at_school_level.jpg" target="_blank"
+						style="text-decoration: underline;">2018
+						校级</a>；<a href="../images/2018_Excellent_graduate_student_at_college_level.jpg" target="_blank"
+						style="text-decoration: underline;">2018
 						院级</a>
 					）
 				</li>
-				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;两次获校级优秀团员（Two
-					times:<a href="../images/2017_Excellent_League_member_at_school_level.jpg" target="_blank">2017
-						校级</a><a href="../images/2018_Excellent_League_member_at_school_level.jpg" target="_blank">2018
+				<li>两次获校级优秀团员（<a href="../images/2017_Excellent_League_member_at_school_level.jpg" target="_blank"
+						style="text-decoration: underline;">2017
+						校级</a>；<a href="../images/2018_Excellent_League_member_at_school_level.jpg" target="_blank"
+						style="text-decoration: underline;">2018
 						校级</a>
 				</li>
-				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="..images/2016_Class_deputy_league_secretary.jpg"
-						target="_blank">担任班级副团支书</a></li>
+				<li><a href="..images/2016_Class_deputy_league_secretary.jpg" target="_blank">担任班级副团支书</a></li>
 				<li><a href="../images/2016_Excellent_Graduation_Thesis.jpg"
 						target="_blank">本科毕业论文获西北农林科技大学优秀毕业论文（2016）</a></li>
 				<li><a href="../images/2015_Pastoral_envoy.jpg" target="_blank">组织西北农林科技大学田园使者团队，获校级“优秀奖”（2015）</a></li>
