--- a/index.html
+++ b/index.html
@@ -618,19 +618,22 @@
 				<li><b>2019</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2019_Excellent_graduate_student_of_NNU.jpg"
 						target="_blank">Outstanding Graduate of Nanjing Normal University</a></li>
 				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent Postgraduate of Nanjing Normal University (Four
-					times:<a href="images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank">2017
-						Shool-Level</a><a href="images/2017_Excellent_graduate_student_at_college_level.jpg"
-						target="_blank">2017
-						College-Level</a><a href="images/2018_Excellent_graduate_student_at_school_level.jpg"
-						target="_blank">2018 Shool-Level</a><a
-						href="images/2018_Excellent_graduate_student_at_college_level.jpg" target="_blank">2018
+					times:&nbsp;<a href="images/2017_Excellent_graduate_student_at_school_level.jpg" target="_blank"
+						style="text-decoration: underline;">2017
+						Shool-Level</a> / <a href="images/2017_Excellent_graduate_student_at_college_level.jpg"
+						target="_blank" style="text-decoration: underline;">2017
+						College-Level</a> / <a href="images/2018_Excellent_graduate_student_at_school_level.jpg"
+						target="_blank" style="text-decoration: underline;">2018 Shool-Level</a> / <a
+						href="images/2018_Excellent_graduate_student_at_college_level.jpg" target="_blank"
+						style="text-decoration: underline;">2018
 						College-Level</a>
 					)
 				</li>
 				<li><b>2018</b>&nbsp;&nbsp;&nbsp;&nbsp;Excellent League Member of Nanjing Normal University (Two
-					times:<a href="images/2017_Excellent_League_member_at_school_level.jpg" target="_blank">2017
-						Shool-Level</a><a href="images/2018_Excellent_League_member_at_school_level.jpg"
-						target="_blank">2018
+					times:&nbsp;<a href="images/2017_Excellent_League_member_at_school_level.jpg" target="_blank"
+						style="text-decoration: underline;">2017
+						Shool-Level</a> / <a href="images/2018_Excellent_League_member_at_school_level.jpg"
+						target="_blank" style="text-decoration: underline;">2018
 						Shool-Level</a> )
 				</li>
 				<li><b>2016</b>&nbsp;&nbsp;&nbsp;&nbsp;First‐class scholarship of Nanjing Normal University (Two times)
