--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 		<div class="row button-section">
 			<div class="col-twelve">
 				<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
-				<a href="assets/KaiRen_CV_2023.pdf" title="Download CV" class="button button-primary"
+				<a href="assets/KaiRen_CV.pdf" title="Download CV" class="button button-primary"
 					target="__blank">Download CV</a>
 				<!-- <a href="http://d.renkaigis.com/resume/Resume_RenKai1.pdf" title="Download CV"
 					class="button button-primary" target="__blank">Download CV</a> -->
