--- a/cn/index.html
+++ b/cn/index.html
@@ -104,8 +104,8 @@
 		<ul class="intro-social">
 			<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 			<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
-			<li><a href="https://weibo.com/renkai123" title="Weibo"><i class="fa fa-weibo"></i></a></li>
 			<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+			<li><a href="http://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 			<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 		</ul> <!-- /intro-social -->
@@ -1009,8 +1009,8 @@
 				<ul class="footer-social">
 					<li><a href="http://renkaigis.cn/" title="Home"><i class="fa fa-home fa-fw"></i></a></li>
 					<li><a href="https://github.com/renkaigis" title="Github"><i class="fa fa-github"></i></a></li>
-					<li><a href="https://weibo.com/renkai123" title="Weibo"><i class="fa fa-weibo"></i></a></li>
 					<li><a href="https://twitter.com/renkaigis" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="http://notes.renkaigis.cn" title="Notes"><i class="fa fa-book"></i></a></li>
 					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 					<li><a href="http://photo.renkaigis.cn/" title="Photography"><i class="fa fa-camera"></i></a></li>
 				</ul>
