--- a/cn/index.html
+++ b/cn/index.html
@@ -581,9 +581,9 @@
 
 			<h3>参与的一些小项目: </h3>
 			<ul class="disc">
-				<li><a href="http://you.renkaigis.cn/" target="_blank">大油作为 —— 含油污泥修复专家</a><br /><a
-						href="../images/2022_Provincial_Bronze_Award.jpg" target="_blank"
-						style="text-decoration: underline;">
+				<li><a href="http://you.renkaigis.cn/" target="_blank">大油作为 —— 含油污泥修复专家 <i class="fa  fa-trophy"
+							style="color:goldenrod;"></i></a><br /><a href="../images/2022_Provincial_Bronze_Award.jpg"
+						target="_blank" style="text-decoration: underline;">
 						[ 省级铜奖 ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
 						href="../images/2022_School_Silver_Award.jpg" target="_blank"
 						style="text-decoration: underline;">[
