--- a/index.html
+++ b/index.html
@@ -666,7 +666,8 @@
 			<h3>Some projects: </h3>
 			<ul class="disc">
 				<li><a href="http://you.renkaigis.cn/" target="_blank">Big Oil Benefits —— Oily Sludge
-						Remediation Expert </a><br /><a href="images/2022_Provincial_Bronze_Award.jpg" target="_blank"
+						Remediation Expert <i class="fa  fa-trophy" style="color:goldenrod;"></i></a><br /><a
+						href="images/2022_Provincial_Bronze_Award.jpg" target="_blank"
 						style="text-decoration: underline;">
 						[ Provincial Bronze Award ]</a>&nbsp;&nbsp;&nbsp;&nbsp;&&nbsp;&nbsp;&nbsp;&nbsp;<a
 						href="images/2022_School_Silver_Award.jpg" target="_blank" style="text-decoration: underline;">[
