--- a/cn/index.html
+++ b/cn/index.html
@@ -87,8 +87,10 @@
 
 					<h5>Hello, World.</h5>
 					<h6></h6>
-					<h1>I'm 任 凯.</h1>
-
+					<h1>I'm 任 凯。</h1>
+					<p class="intro-position" style="margin-bottom: 0.5em;">
+						<span>鸡丝与农业边缘徘徊的小白 </span>
+					</p>
 					<p class="intro-position">
 						<span>热爱学习的鸡丝儿 </span>
 						<span>渴望成为技术控的菜鸟 </span>
@@ -239,7 +241,24 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>博士</h3>
+							<h3>访问学者</h3>
+							<p>2023.03 - 至今</p>
+						</div>
+						<div class="timeline-content">
+							<h4>澳大利亚科廷大学 - 设计与建筑环境学院
+							</h4>
+							<p>
+								<h5>研究方向：</h5>GIS 空间分析 | 气候变化与农业
+							</p>
+						</div>
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+						<div class="timeline-header">
+							<h3>博士研究生</h3>
 							<p>2020.09 - 至今</p>
 						</div>
 						<div class="timeline-content">
@@ -250,7 +269,7 @@
 								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
 							</p>
 							<p>
-								<h5>研究方向：</h5>气象要素空间插值预测 | GIS 空间分析
+								<h5>研究方向：</h5>气象要素空间插值预测 | 气候变化
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -973,8 +992,8 @@
 				</div>
 				<h5>地 址</h5>
 				<p style="color: #888888">
-					西北农林科技大学<br>
-					资源环境学院
+					澳大利亚科廷大学<br>
+					设计与建筑环境学院
 				</p>
 			</div>
 
@@ -1024,7 +1043,7 @@
 							src="../images/beian.png" style="float:left;" />
 						<p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#6e6e6e;">陕公网安备
 							61909002000104号</p>
-					</a><span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
+					</a><span>© Copyright Kai Ren 2018-<span id="currentYear"></span>.</span>
 				</div>
 				<!-- <div class="copyright">
 					<span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
