--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 					<h1>I'm Kai Ren.</h1>
 
 					<p class="intro-position">
+						<span>GIS & Agriculture </span>
 						<span>GIS Researcher </span>
 						<span>GIS Software Engineer</span>
 					</p>
@@ -238,11 +239,28 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>Ph.D.</h3>
-							<p>2020.09 - 至今</p>
+							<h3>Ph.D. Visiting Student</h3>
+							<p>2023.03 - Current</p>
 						</div>
 						<div class="timeline-content">
-							<h4>Curtin University, Australia - GIS Spatial Analysis
+							<h4>Curtin University, Australia - School of Design and the Built Environment
+							</h4>
+							<p>
+								<h5>Research interests:</h5>GIS Spatial Analysis | Climate Change and Agriculture
+							</p>
+						</div>
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+						<div class="timeline-header">
+							<h3>Ph.D. Student</h3>
+							<p>2020.09 - Current</p>
+						</div>
+						<div class="timeline-content">
+							<h4>Curtin University, Australia -
 							</h4>
 							<h4>Northwest A&F University - College of Resources and Environment - Land Resources and
 								Spatial Information Technology
@@ -254,7 +272,7 @@
 							</p>
 							<p>
 								<h5>Research interests:</h5>Spatial Interpolation Prediction of Meteorological Elements
-								| GIS spatial analysis
+								| Climate Change
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -686,7 +704,7 @@
 				<li><a href="images/2017_Nanjing_Marathon.jpg" target="_blank">2017 Nanjing Marathon - 02:27:05</a></li>
 				<li><a href="images/2017_Xianlin_Marathon.jpg" target="_blank">2017 Nanjing Xianlin Half Marathon -
 						02:23:39</a></li>
-				<li><a href="images/2013_3rd_ChinaDream.jpg" target="_blank">2013 Won the third prize of Shaanxi
+				<li><a href="images/2013_3rd_ChinaDream.jpg" target="_blank">2013 Won the Third Prize of Shaanxi
 						University Photography Competition
 					</a></li>
 			</ul>
@@ -1089,9 +1107,13 @@
 				</div>
 				<h5>Where to find me</h5>
 				<p style="color: #888888">
+					Curtin University<br>
+					School of Design and the Built Environment
+				</p>
+				<!-- <p style="color: #888888">
 					Northwest A&F University<br>
 					College of Natural Resources and Environment
-				</p>
+				</p> -->
 			</div>
 
 			<div class="col-four tab-full collapse">
@@ -1144,7 +1166,7 @@
 							src="images/beian.png" style="float:left;" />
 						<p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#6e6e6e;">陕公网安备
 							61909002000104号</p>
-					</a><span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
+					</a><span>© Copyright Kai Ren 2018-<span id="currentYear"></span>.</span>
 				</div>
 				<!-- <div class="copyright">
 					<span>© Copyright RenKai 2018-<span id="currentYear"></span>.</span>
